# Waveguide_sim

./: CMakeLists.txt  README.md
mesh/: mesh_gen.cpp  waveguide_mesh.msh
src/: dg_block_inverse.cpp  dg_block_inverse.hpp  main.cpp  maxwell_evolution.cpp  maxwell_evolution.hpp
